# Simple-Project-Py

./: README.md  app_demo.py  cli_demo.py  environment.yaml  pyproject.toml
src/simplepypkg/: custom_functions.py
