[tool.poetry]
name = "simple-python-project"
version = "0.1.0"
description = ""
authors = ["Jean-baptiste Aujogue <jb.aujogue@gmail.com>"]
readme = "README.md"
packages = [{include = "simplepypkg", from = "src"}]

[tool.poetry.dependencies]
fire = "^0.7.0"
python = "^3.11"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
